--- a/.github/workflows/ios_ci_release.yml
+++ b/.github/workflows/ios_ci_release.yml
@@ -1,11 +1,11 @@
-name: iOS CI & Native Artifact Release
+name: iOS CI & TestFlight Release
 
 on:
   push:
     branches:
       - main
     tags:
-      - 'ios-v*'
+      - "ios-v*"
   workflow_dispatch:
 
 jobs:
@@ -13,49 +13,56 @@ jobs:
     runs-on: macos-14
 
     env:
-      # Fastlane and signing credentials
       APPLE_ID: ${{ secrets.APPLE_ID }}
       APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
       APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
-      MATCH_KEYCHAIN_PASSWORD: ${{ secrets.MATCH_KEYCHAIN_PASSWORD }}
       APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
-      APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
+      APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
       APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
+      IOS_OUTPUT_NAME: JunoNative.ipa
 
     steps:
-      - name: Checkout code
+      - name: 🧾 Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '24'
-          cache: 'npm'
-
-      - name: Install JS dependencies
-        run: npm ci
-
-      - name: Validate package.json
-        run: node scripts/validate-package-json.js
-
-      - name: Lint code
-        run: npm run lint
-
-      - name: Compile TurboModules
-        run: bash scripts/compile-turbo-modules.sh
-
-      - name: Setup Ruby & Bundler
+      - name: 🔧 Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.2'
           bundler-cache: true
 
-      - name: Bundle install
-        run: bundle install
+      - name: 🧱 Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
 
-      - name: Install CocoaPods
-        run: bundle exec pod install
-        working-directory: ios
+      - name: 📦 Install Node dependencies
+        run: |
+          npm ci
 
-      - name: Run Fastlane iOS CI lane
-        run: bundle exec fastlane ios ios_ci
+      - name: 📦 Install Ruby gems
+        run: |
+          bundle install --path=vendor/bundle
+
+      - name: 🧪 Validate package.json for iOS CI
+        run: |
+          node scripts/validate-package-json.js
+        env:
+          CI: true
+
+      - name: 🍏 Set up Xcode toolchain info
+        run: |
+          xcodebuild -version
+          xcode-select -p
+
+      - name: 🚀 Run Fastlane iOS CI lane
+        run: |
+          bundle exec fastlane ios ios_ci
+        env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+          APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
+          APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
+          APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
+          APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
+          IOS_OUTPUT_NAME: JunoNative.ipa
