--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,9 +1,8 @@
 platform :ios, '15.1'
-
 source 'https://cdn.cocoapods.org/'
 
-root_path = File.expand_path('..', __dir__)
-node_modules_path = File.expand_path('../node_modules', __dir__)
+root_path           = File.expand_path('..', __dir__)
+node_modules_path   = File.expand_path('../node_modules', __dir__)
 
 unless File.directory?(node_modules_path)
   Pod::UI.puts 'React Native dependencies not found. Run `npm ci` before installing pods.'
@@ -29,15 +28,13 @@ require cli_platform_ios
 project 'JunoNative.xcodeproj'
 
 target 'JunoNative' do
-  # Drive use_native_modules via the actual React Native CLI at the repo root.
-  # React Native 0.76's autolinking expects no positional array argument here.
   config = use_native_modules!
 
   use_react_native!(
-    :path => config[:reactNativePath],
-    :hermes_enabled => true,
-    :fabric_enabled => true,
-    :app_path => root_path
+    path:           config[:reactNativePath],
+    hermes_enabled: true,
+    fabric_enabled: true,
+    app_path:       root_path
   )
 
   post_install do |installer|
@@ -45,7 +42,6 @@ target 'JunoNative' do
 
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
-        # Keep iOS 15+ minimum and modern build settings
         config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.1'
       end
     end
