--- a/.github/workflows/ios_ci_release.yml
+++ b/.github/workflows/ios_ci_release.yml
@@ -1,4 +1,4 @@
-name: iOS CI & TestFlight Release
+name: iOS CI & Native Artifact Release
 
 on:
   push:
@@ -13,28 +13,35 @@ jobs:
     runs-on: macos-14
 
     env:
-      APPLE_ID: ${{ secrets.APPLE_ID }}
-      APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-      APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
-      APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
-      APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
-      APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
-      APP_STORE_CONNECT_API_KEY: ${{ secrets.APP_STORE_CONNECT_API_KEY }}
+      # Fastlane / code signing envs (read from GitHub Secrets)
+      APPLE_ID: ${{ secrets.APPLE_ID }}                         # e.g. ios-team@pulsr.co.uk
+      APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}             # e.g. com.pulsr.junonative
+      APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}               # e.g. 123456789A
+      IOS_OUTPUT_NAME: JunoNative.ipa
+
+      # App Store Connect API key pieces
+      APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APPLE_KEY_ID }}         # Key ID from ASC
+      APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}   # Issuer ID from ASC
+      APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APPLE_KEY_BASE64 }} # base64 of .p8 file
+
+      # Distribution certificate (p12) as base64 and its password
       IOS_DIST_CERT_BASE64: ${{ secrets.IOS_DIST_CERT_BASE64 }}
       IOS_DIST_CERT_PASSWORD: ${{ secrets.IOS_DIST_CERT_PASSWORD }}
-      IOS_OUTPUT_NAME: JunoNative.ipa
+
+      # Optional: numeric App Store app id (used by upload_to_testflight)
+      APP_APPLE_ID: ${{ secrets.APP_APPLE_ID }}
 
     steps:
       - name: 🧾 Checkout code
         uses: actions/checkout@v4
 
-      - name: 🔧 Set up Ruby
+      - name: 🧱 Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2'
+          ruby-version: '3.3'
           bundler-cache: true
 
-      - name: 🧱 Set up Node.js
+      - name: 🟦 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '22'
@@ -43,11 +50,11 @@ jobs:
         run: |
           npm ci
 
-      - name: 📦 Install Ruby gems
+      - name: 💎 Install Ruby gems (fastlane, cocoapods, etc.)
         run: |
-          bundle install --path=vendor/bundle
+          bundle install --path vendor/bundle
 
-      - name: 🍏 Show Xcode toolchain info
+      - name: 🔧 Show Xcode version
         run: |
           xcodebuild -version
           xcode-select -p
@@ -55,14 +62,3 @@ jobs:
       - name: 🚀 Run Fastlane iOS CI lane
         run: |
           bundle exec fastlane ios ios_ci
-        env:
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-          APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
-          APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
-          APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
-          APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
-          APP_STORE_CONNECT_API_KEY: ${{ secrets.APP_STORE_CONNECT_API_KEY }}
-          IOS_DIST_CERT_BASE64: ${{ secrets.IOS_DIST_CERT_BASE64 }}
-          IOS_DIST_CERT_PASSWORD: ${{ secrets.IOS_DIST_CERT_PASSWORD }}
-          IOS_OUTPUT_NAME: JunoNative.ipa
