Refactor App Store Connect verification workflow

--- a/.github/workflows/verify_appstore_connect.yml
+++ b/.github/workflows/verify_appstore_connect.yml
@@ -1,32 +1,21 @@
-name: Verify App Store Connect & Signing Secrets
+name: Verify App Store Connect Signing
 
 on:
-  workflow_dispatch: {}  # manual trigger from the Actions tab
-  push:
-    branches:
-      - main
-    paths:
-      - ".github/workflows/verify_appstore_connect.yml"
-      - "fastlane/**"
+  workflow_dispatch:
 
 jobs:
   verify-asc-signing:
     runs-on: macos-14
 
     env:
-      # App / team identity
-      APPLE_ID:        ${{ secrets.APPLE_ID }}         # e.g. ios-team@pulsr.co.uk
-      APP_IDENTIFIER:  ${{ secrets.APP_IDENTIFIER }}   # e.g. com.pulsr.junonative
-      APPLE_TEAM_ID:   ${{ secrets.APPLE_TEAM_ID }}    # e.g. 123456789A
-
-      # ASC API key pieces
-      APP_STORE_CONNECT_API_KEY_ID:        ${{ secrets.APPLE_KEY_ID }}       # Key ID from ASC
-      APP_STORE_CONNECT_API_ISSUER_ID:     ${{ secrets.APPLE_ISSUER_ID }}    # Issuer ID from ASC
-      APP_STORE_CONNECT_API_KEY_BASE64:    ${{ secrets.APPLE_KEY_BASE64 }}   # base64 of .p8 file
-
-      # Distribution certificate (p12)
-      IOS_DIST_CERT_BASE64:   ${{ secrets.IOS_DIST_CERT_BASE64 }}           # base64 of your .p12
-      IOS_DIST_CERT_PASSWORD: ${{ secrets.IOS_DIST_CERT_PASSWORD }}         # password used to export .p12
+      APPLE_ID:                        ${{ secrets.APPLE_ID }}
+      APP_IDENTIFIER:                  ${{ secrets.APP_IDENTIFIER }}
+      APPLE_TEAM_ID:                   ${{ secrets.APPLE_TEAM_ID }}
+      APP_STORE_CONNECT_API_KEY_ID:    ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
+      APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
+      APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
+      IOS_DIST_CERT_BASE64:            ${{ secrets.IOS_DIST_CERT_BASE64 }}
+      IOS_DIST_CERT_PASSWORD:          ${{ secrets.IOS_DIST_CERT_PASSWORD }}
 
     steps:
       - name: 🧾 Checkout code
@@ -38,10 +27,8 @@ jobs:
           ruby-version: '3.3'
           bundler-cache: true
 
-      - name: 📦 Install Ruby gems
-        run: |
-          bundle install --path vendor/bundle
+      - name: 📦 Install bundle
+        run: bundle install --path vendor/bundle
 
-      - name: 🔍 Run Fastlane ASC + signing verification lane
-        run: |
-          bundle exec fastlane ios verify_appstore_connect
+      - name: 🔍 Verify App Store Connect signing
+        run: bundle exec fastlane ios verify_appstore_connect
